Make terminal panel larger (65/35 split) and fix content stretching
- Changed from 70/30 to 65/35 split ratio
- Use flex instead of fixed width percentages
- Use align-items/justify-content: stretch to fill space
- Children now flex to fill their containers

--- a/src/components/SplitDesktop.css
+++ b/src/components/SplitDesktop.css
@@ -73,29 +73,30 @@
 }
 
 .split-left {
-  width: 70%;
+  flex: 65;
   height: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: stretch;
+  justify-content: stretch;
   background: #1a1a2e;
   overflow: hidden;
 }
 
 .split-right {
-  width: 30%;
+  flex: 35;
   height: 100%;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items: stretch;
+  justify-content: stretch;
   background: #1a1a2e;
   overflow: hidden;
 }
 
-.split-left > div,
-.split-right > div {
+.split-left > *,
+.split-right > * {
   width: 100%;
   height: 100%;
+  flex: 1;
 }
 
 .split-left iframe,
@@ -103,6 +104,7 @@
   width: 100%;
   height: 100%;
   border: none;
+  display: block;
 }
 
 .split-divider {
